<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/person"/>

    <TableLayout
        android:layout_width="339dp"
        android:layout_height="326dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/genderSPNR"
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/heightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/height" />

            <Spinner
                android:id="@+id/feetSPNR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/feetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feet" />

            <Spinner
                android:id="@+id/inchesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/inchesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inches" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/weightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/weightEDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:autofillHints="@string/weight_hint"
                android:hint="@string/weight_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/poundsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pounds" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/age" />

            <Spinner
                android:id="@+id/ageSPNR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>