<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:padding="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalStepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="30dp"
                android:layout_weight="1"
                android:textColor="#010203"/>

            <TextView
                android:id="@+id/totalSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="0"
                android:textColor="#010203"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textColor="#010203"/>

            <TextView
                android:id="@+id/totalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textColor="#010203"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalCaloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textColor="#010203"/>

            <TextView
                android:id="@+id/totalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textColor="#010203"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:padding="20dp">
        <Button
            android:id="@+id/walkingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#7705FA05"
            android:text="@string/walking" />

        <Button
            android:id="@+id/cyclingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#7705FA05"
            android:text="@string/cycling" />

        <Button
            android:id="@+id/hikingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#7705FA05"
            android:text="@string/hiking" />

        <Button
            android:id="@+id/weatherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7705FA05"
            android:text="@string/weather" />

    </LinearLayout>
</RelativeLayout>
