<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">


    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:text="@string/temp"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/weather2"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/weatherStatTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/weather_status"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/weatherTV"
        app:layout_constraintStart_toStartOf="@+id/weatherTV"
        app:layout_constraintTop_toBottomOf="@+id/weatherTV" />


</androidx.constraintlayout.widget.ConstraintLayout>