<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlotRouteActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="344dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/startTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/startLocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="220dp"
                android:text="Location"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/goalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goalLocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Location"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="331dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/approxStepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/approxSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="175dp"
                android:text="1000"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/approxDistTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/approxDist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/approxCalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/approxCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/approxTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/approxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="60"
                android:textAlignment="textEnd"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/findARouteBTN"
        android:layout_width="346dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:background="#CFFF6A"
        android:text="@string/find_a_route"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRouteBTN" />

    <Button
        android:id="@+id/createRouteBTN"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:background="#CFFF6A"
        android:text="@string/create"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/plotRouteStartBTN"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:background="#CFFF6A"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>