<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRouteActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="232dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/viewRouteStartBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/viewRoutestartTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewRoutestartLocationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Location"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewRoutegoalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewRoutegoalLocationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Location"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/viewRouteStartBTN"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_gravity="center_horizontal"
        android:background="#CFFF6A"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="358dp"
        android:layout_height="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewRouteapproxSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/viewRouteapproxStepsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="100dp"
                android:text="1000"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/viewRouteapproxDist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/viewRouteapproxDistTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/approxCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/approxCalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/viewRouteDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duration"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/viewRouteDurationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="100"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/approxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/approxTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="60"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>